--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= yield :head %>
+    <%= javascript_include_tag "turbo", type: "module" %>
   </head>
 
   <body>
