--- a/test/dummy/app/views/messages/update.turbo_stream.erb
+++ b/test/dummy/app/views/messages/update.turbo_stream.erb
@@ -1,7 +1,7 @@
 <%= turbo_stream.remove_all @message %>
 <%= turbo_stream.replace_all @message %>
 <%= turbo_stream.replace_all @message, "Something else" %>
-<%= turbo_stream.replace_all "#message_5", "Something fifth" %>
+<%= turbo_stream.replace_all "#message_4", "Something fourth" %>
 <%= turbo_stream.replace_all "#message_5", partial: "messages/message", locals: { message: Message.new(id: 5, content: "OLLA!") } %>
 <%= turbo_stream.append_all "#messages", @message %>
 <%= turbo_stream.append_all "#messages", partial: "messages/message", locals: { message: Message.new(id: 5, content: "OLLA!") } %>
