Include minimal layout for frame responses (#428)
Previously, responses to frame requests were rendered without any
layout. Since Turbo does not need the content outside of the frame,
reducing the amount that is rendered can be a useful optimisation.

However, this optimisation prevents responses from specifying
`head` content as well. There are cases where it would be useful for
Turbo to have access to items specified in head, like the meta tags used
for specifying visit and cache control.

To get around this, we change the optimisation to use a minimal layout
for frame responses, rather than no layout. With this, applications can
render content into the `head` if they want, and the Turbo Rails helpers
like `turbo_page_requires_reload` will also work.

--- a/test/dummy/app/views/trays/show.html.erb
+++ b/test/dummy/app/views/trays/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <meta name="test" content="present" />
+<% end %>
+
 <turbo-frame id="tray">
   <div>This is a tray!</div>
   <div><%= @frame_id %></div>
