Fix the submitter’s formmethod not being respected when using Rails ActionView::Helpers::FormBuilder#button formmethod option. (#445)
Co-authored-by: Felipe <felipe@temporadalivre.com>

--- a/test/dummy/app/views/articles/edit.html.erb
+++ b/test/dummy/app/views/articles/edit.html.erb
@@ -10,6 +10,10 @@
 
   <button>Submit as PATCH</button>
   <button formmethod="post" formaction="<%= articles_path %>">Submit as POST</button>
+
+  <%# In Rails 7, there's an override of formaction, so `form.button formaction: destroy_all_articles_path, formmethod: :delete` would generate the HTML below. In Rails 6, the override of `formaction` does not exist yet, so we generate the HTML manually.  %>
+  <button name="_method" type="submit" formaction="<%= destroy_all_articles_path %>" formmethod="post" value="delete">Delete all articles</button>
+
 <% end %>
 
 <%= link_to "Submit as DELETE", article_path(@article.id), data: { turbo_method: :delete } %>
