use helper_method for turbo_frame_request_id (#417)

--- a/test/dummy/app/views/trays/show.html.erb
+++ b/test/dummy/app/views/trays/show.html.erb
@@ -4,5 +4,5 @@
 
 <turbo-frame id="tray">
   <div>This is a tray!</div>
-  <div><%= @frame_id %></div>
+  <div><%= turbo_frame_request_id %></div>
 </turbo-frame>
