Expose `Turbo::Native::Navigation#turbo_native_app?` helper method (#419)
First, promote `Turbo::Native::Navigation` to be an
[ActiveSupport::Concern][].

Next, expose `#turbo_native_app?` to be a view helper through a call to
[helper_method][] from within the [included][] block.

[ActiveSupport::Concern]: https://edgeapi.rubyonrails.org/classes/ActiveSupport/Concern.html
[helper_method]: https://edgeapi.rubyonrails.org/classes/AbstractController/Helpers/ClassMethods.html#method-i-helper_method
[included]: https://edgeapi.rubyonrails.org/classes/ActiveSupport/Concern.html#method-i-included

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="<%= "turbo-native" if turbo_native_app? %>">
     <%= yield %>
   </body>
 </html>
