Separate turbo meta tag generation from `provides :head` calls.
This makes it possible to use the meta tag helpers from outside Rails rendering,
such as an app built entirely from Phlex components.

The `turbo_meta_tags` method was added to minimize confusion over the seemingly
random `content_for :head` that has been observed in early Turbo 8 betas. This
is a thin wrapper around `content_for :head`.

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= yield :head %>
+    <%= turbo_meta_tags %>
     <%= javascript_importmap_tags %>
   </head>
 
