--- a/test/frames/views/layouts/turbo_rails/frame.html.erb
+++ b/test/frames/views/layouts/turbo_rails/frame.html.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="alternative" content="present" />
-    <%= yield :head %>
+    <%= turbo_meta_tags %>
   </head>
   <body>
     <%= yield %>
