Remove turbo_meta_tags and add missing documentation (#548)
See https://github.com/hotwired/turbo-rails/pull/542#issuecomment-1869699754

--- a/test/frames/views/layouts/turbo_rails/frame.html.erb
+++ b/test/frames/views/layouts/turbo_rails/frame.html.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="alternative" content="present" />
-    <%= turbo_meta_tags %>
+    <%= yield :head %>
   </head>
   <body>
     <%= yield %>
